<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/nav_view_profile"
            android:icon="@drawable/viewprofile"
            android:title="@string/viewprofile" />


        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/favourrites"
            android:title="@string/favouritesav" />

        <item
            android:id="@+id/nav_provisitor"
            android:icon="@drawable/profilevisitor"
            android:title="@string/profilevisit" />


        <item
            android:id="@+id/nav_success"
            android:icon="@drawable/successstories"
            android:title="@string/successstories" />


        <item
            android:id="@+id/nav_changepassword"
            android:icon="@drawable/profilevisitor"
            android:title="@string/changepassword" />


        <item
            android:id="@+id/nav_hide"
            android:icon="@drawable/favourrites"
            android:title="@string/hideprofile" />



        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/faq"
            android:title="@string/faq" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/faq"
            android:title="@string/help" />

        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/icon"
            android:title="@string/privacypoli"/>

        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/icon"
            android:title="@string/terms"/>


        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/rate"
            android:title="@string/rateus" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/rate"
            android:title="@string/aboutus" />


        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />


</menu>