<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hamburgerback"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_view"
        app:elevation="@dimen/margin4"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@color/white"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/margin25"
            android:orientation="vertical">


            <TextView
                android:id="@+id/Login_Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoregular"
                android:text="@string/login_register"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:layout_marginTop="@dimen/margin80"
                android:textStyle="bold"
                android:gravity="center"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin56"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin50"
                android:fontFamily="@font/robotoregular"
                android:hint="@string/email_id_phone_number"
                android:shadowColor="@color/color_gray">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/robotoregular"
                    android:shadowColor="@color/color_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin56"
                android:fontFamily="@font/robotoregular"
                android:hint="@string/password"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin20"
                android:shadowColor="@color/color_gray"
                app:endIconMode="password_toggle"
                app:endIconTint="#7F7F7F">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/robotoregular"
                    android:shadowColor="@color/color_gray" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/forgetPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin30"
                android:layout_marginTop="@dimen/margin10"
                android:fontFamily="@font/robotoregular"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textAlignment="textEnd"
                android:textSize="@dimen/margin14"/>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin45"
                android:background="@drawable/bkg_button_gradient"
                android:fontFamily="@font/robotoregular"
                android:text="@string/login"
                android:layout_gravity="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin45"
                android:fontFamily="@font/robotoregular"
                android:text="@string/register"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:background="@drawable/bkg_button_gradient"
                android:layout_marginTop="@dimen/margin20"
                android:layout_marginBottom="@dimen/margin20"
                app:backgroundTint="@color/white"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>